# SymDWI

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
api/bundle/: index.html
api/simulate/: index.html
docs/: index.md
docs/api/: bundle.md  gm_compartments.md  simulate.md
docs/examples/: bundleseg_phantom.md  getting_started.md  gui_guide.md
examples/: bundleseg_phantom.py  getting_started.py
examples/bundleseg_phantom/: index.html
examples/getting_started/: index.html
examples/gui_guide/: index.html
search/: search_index.json
symdwi/: __init__.py  _voxel.py  bundle.py  gm_compartments.py  simulate.py
symdwi/gui/: __main__.py  app.py  io.py  scene.py  sidebar.py  theme.py  views2d.py  views3d.py  widgets.py
tests/: test_convention.py  test_gm_compartments.py  test_groundtruth.py  test_simulate.py
