[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symdwi"
version = "0.1.0"
description = "Synthetic diffusion MRI phantom library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "scipy",
    "nibabel",
    "dipy",
    "tqdm",
]

[project.optional-dependencies]
gui = ["pyside6", "pyvista", "pyvistaqt", "matplotlib"]
vis = ["fury"]
dev = ["pytest", "mkdocs-material", "mkdocstrings[python]"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["symdwi"]

[project.scripts]
symdwi-gui = "symdwi.gui.__main__:main"