[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symdwi"
version = "1.0.0"
description = "Synthetic diffusion MRI phantom library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Antonio Di Meglio", email = "82523820+antonio-dimeglio@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy",
    "scipy",
    "nibabel",
    "dipy",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/antonio-dimeglio/SymDWI"
Documentation = "https://antonio-dimeglio.github.io/SymDWI/"
Repository = "https://github.com/antonio-dimeglio/SymDWI"
Issues = "https://github.com/antonio-dimeglio/SymDWI/issues"

[project.optional-dependencies]
gui = ["pyside6", "pyvista", "pyvistaqt", "matplotlib"]
vis = ["fury"]
dev = ["pytest", "mkdocs-material", "mkdocstrings[python]"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["symdwi"]

[project.scripts]
symdwi-gui = "symdwi.gui.__main__:main"